feat:用户信息展示组件添加
